// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontVariantCaps renders 0 1`] = `
Array [
  .c0 {
  font-variant-caps: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantCaps renders function 1`] = `
Array [
  .c0 {
  font-variant-caps: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantCaps renders invalid theme path 1`] = `
Array [
  .c0 {
  font-variant-caps: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantCaps renders negative number 1`] = `
Array [
  .c0 {
  font-variant-caps: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantCaps renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-variant-caps: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-caps: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-caps: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-caps: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-variant-caps: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-caps: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-caps: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-caps: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-variant-caps: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-caps: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-caps: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-caps: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-variant-caps: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-caps: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-caps: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-caps: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantCaps renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    font-variant-caps: July;
  }
}

@media April {
  .c0 {
    font-variant-caps: August;
  }
}

@media January {
  .c0 {
    font-variant-caps: September;
  }
}

@media April {
  .c0 {
    font-variant-caps: November;
  }
}

@media June {
  .c0 {
    font-variant-caps: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-variant-caps: July;
  }
}

@media April {
  .c0 {
    font-variant-caps: August;
  }
}

@media January {
  .c0 {
    font-variant-caps: September;
  }
}

@media April {
  .c0 {
    font-variant-caps: November;
  }
}

@media June {
  .c0 {
    font-variant-caps: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-variant-caps: January;
  }
}

@media April {
  .c0 {
    font-variant-caps: December;
  }
}

@media January {
  .c0 {
    font-variant-caps: April;
  }
}

@media April {
  .c0 {
    font-variant-caps: May;
  }
}

@media June {
  .c0 {
    font-variant-caps: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-variant-caps: January;
  }
}

@media April {
  .c0 {
    font-variant-caps: December;
  }
}

@media January {
  .c0 {
    font-variant-caps: April;
  }
}

@media April {
  .c0 {
    font-variant-caps: May;
  }
}

@media June {
  .c0 {
    font-variant-caps: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantCaps renders postitive number 1`] = `
Array [
  .c0 {
  font-variant-caps: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantCaps renders string 1`] = `
Array [
  .c0 {
  font-variant-caps: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantCaps renders valid theme path 1`] = `
Array [
  .c0 {
  font-variant-caps: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-caps: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
